Resolve some deprecation warnings